# vvz-code-analyzis

./: .cursorrules  .dockerignore  .env.example  .flake8  .gitignore  1  :memory:  AGENTS.md  ANALYSIS.md  CLAUDE.md  COMMANDS_ANALYSIS.md  DEB_BUILD_README.md  FASTMCP_COMPARISON.md  MCP_REGISTRATION.md  MIGRATION_SUMMARY.md  README.md  README_MCP.md  README_MCP_SERVER.md  README_TEST_MCP.md  REFACTORING_CHECK_REPORT.md  _patch_open_command.py  _tmp_list_zip.txt  build.sh  code_analysis_config.json  config copy.json  config.example.json  config.example.mtls.json  config.json  config_adapter.json  config_mtls_proxy.json  debug_classdef2.py  debug_classdef_replace.py  extract_base_index_manager.json  mypy.ini  patch_selected_nodes.py  projectid  pyproject.toml  pytest.ini  register_mcp_server.py  requirements.txt  (+22 more)
.code_mapper_backups/: test_error_messages_1766537933.py.backup  test_extract2_1766537314.py.backup  test_extract_1766537256.py.backup  test_format_extract2_1766537735.py.backup  test_format_split_1766537691.py.backup  test_refactor_1766537208.py.backup  test_refactor_1766537222.py.backup
casmgr_entry/: __init__.py  main.py
client/: README.md  pyproject.toml
client/code_analysis_client/: __init__.py  client.py  commands_proxy.py  config.py  exceptions.py  file_session.py  queue_wait.py  responses.py  server_api.py  server_schema.py  universal_file.py  validation.py
client/examples/: README.md  _client_api_inventory.py  _common.py  ex_config_only.py  ex_file_sessions.py  ex_minimal_validated.py  ex_session_view_subordinates.py  ex_universal_files.py  run_all_examples.py
code_analysis/: __init__.py  analyzer.py  cli.py  code_analysis.db  code_mapper.py  database.py  hooks.py  hooks_register_git_github.py  hooks_register_part1.py  hooks_register_part2.py  issue_detector.py  jsonrpc_route_compat.py  main.py  main_app_events.py  main_app_factory.py  main_app_factory.py.write  main_cleanup.py  main_config.py  main_daemon_logging.py  main_queue_init.py  main_server_config.py  main_server_presentation.py  main_startup_info.py  main_validation.py  main_workers.py  main_workers_file_watcher.py  main_workers_run.py  mcp_adapter_bootstrap.py  mcp_server.py  openapi_mcp_proxy_compat.py  refactor_cli.py  refactorer.py  reporter.py  server_manager.py
cst-code/: FILE_LIST.txt  README.md
data_analysis/: code_analysis.db
debian/: changelog  conffiles  control  copyright  install-package.sh  postinst  postrm  preinst  prerm  rules
docker/: .env.example  docker-compose.allinone.yml  docker-compose.watch-mounts.yml  docker-compose.yml
docs/: 7d-60-Микроструктура_ВБП_на_планковских_масштабах.md  AI_TOOL_USAGE_RULES.md  ARCHITECTURE_CLARIFICATION_QUESTIONS.md  ARCHITECTURE_CLARIFIED.md  AST_ANALYSIS_CAPABILITIES.md  AST_DUPLICATE_DETECTION.md  AST_UPDATE_ANALYSIS.md  AST_VECTORIZATION_STATUS.md  AST_VS_CST_ARCHITECTURE.md  BACKUP_AND_GIT_COMMIT_ANALYSIS.md  BACKUP_FILES_MCP_ANALYSIS.md  BATCH_DB_PERFORMANCE.md  BHLFF_ANALYSIS.md  BUGREPORT_CHUNKER_ISSUES.md  BUG_REPORT_CHUNKER_CLIENT.md  BUG_REPORT_CHUNKER_METADATA_ADAPTER_METRICS_TOKENS.md  BUG_REPORT_CHUNKER_METADATA_ADAPTER_TYPE_FIELD.md  BUG_REPORT_CHUNKER_SERVER_EMPTY_RESULT.md  BUG_REPORT_CHUNKER_SERVER_EMPTY_RESULT_DETAILED.md  BUG_REPORT_CHUNKING_INTEGRITY_ERROR.md  BUG_REPORT_COMPOSE_CST_MODULE_RANGE.md  BUG_REPORT_MCP_CONFIG_GENERATE.md  BUG_REPORT_REGISTRATION_ALREADY_REGISTERED.md  BUG_REPORT_SEARCH_COMMANDS_OPENAPI.md  CASMGR_DEPLOYMENT.md  CASMGR_DOCKER.md  CHUNKER_TIMING_BENCHMARK.md  CLI_COMMANDS.md  CODE_ANALYSIS_AND_ARCHITECTURE_REPORT.md  CODE_QUALITY_ISSUES.md  COMMANDS_GUIDE.md  COMMANDS_INDEX.md  COMMANDS_VECTORIZATION_DIFFERENCE_ANALYSIS.md  COMMAND_ARCHITECTURE.md  COMMAND_COMPARISON.md  COMMAND_INVENTORY.md  COMMAND_TEST_REPORT.md  COMPONENT_INTERACTION.md  COMPOSE_CST_MODULE_ANALYSIS.md  COMPOSE_CST_MODULE_IPC_ANALYSIS.md  (+183 more)
old_code/: README.md  docstring_chunker.py.2025-12-25T19-58-32  index.txt  refactorer.py.2025-12-25T19-58-20  test_example.py-0474dbe4-835a-4e82-bee4-6da5b33048ee  test_extract.py-51d2a156-dae5-4257-80b1-39e5666be6fd  test_many_versions.py-226f4a9e-5be8-4f44-80a3-1109f18b6908  test_package.py-880b7dca-0449-44fa-aa7a-63198325a272  test_refactor.py-38a44f0c-56f4-4800-a754-c6036e1c0be3  test_versions.py-a57483c9-e0de-4856-9e19-5baa9b5ae625  vectorization_worker.py.2025-12-25T19-58-20
packaging/: config.json.template  secrets.env.template
scripts/: README.md  __init__.py  _bootstrap_pm.txt  _cst_decorator_struct.py  _delete_models_sidecar.py  _find_docstring_validator.py  _new_project_creation.txt  _patch_hooks_register.py  _patch_schema.py  _verify_client_all_commands_catalog.py  _verify_client_all_commands_classifiers.py  _verify_client_all_commands_fixtures.py  _verify_client_all_commands_fixtures_registration.py  _verify_client_all_commands_lifecycle_common.py  _verify_client_all_commands_lifecycle_content_stale.py  _verify_client_all_commands_lifecycle_entities.py  _verify_client_all_commands_lifecycle_fs.py  _verify_client_all_commands_lifecycle_fulltext_seeded.py  _verify_client_all_commands_lifecycle_git.py  _verify_client_all_commands_lifecycle_github.py  _verify_client_all_commands_lifecycle_global_search.py  _verify_client_all_commands_lifecycle_grep_bounded.py  _verify_client_all_commands_lifecycle_list_files_fast.py  _verify_client_all_commands_lifecycle_list_files_glob_fast.py  _verify_client_all_commands_lifecycle_list_projects_fast.py  _verify_client_all_commands_lifecycle_project_trash_restore.py  _verify_client_all_commands_lifecycle_queue.py  _verify_client_all_commands_lifecycle_restore_db_dryrun.py  _verify_client_all_commands_lifecycle_search.py  _verify_client_all_commands_lifecycle_session.py  _verify_client_all_commands_lifecycle_transfer.py  _verify_client_all_commands_lifecycle_watcher_config_load.py  _verify_client_all_commands_lifecycle_workers.py  (+143 more)
(+4672 files in other folders)
