[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis"
version = "1.0.0"
description = "Code analysis MCP server, database tooling, and AST/CST commands"
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" },
]
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "mcp>=1.0.0",
    "pydantic>=2.1.0",
    "svo-client>=3.0.0",
    "lark>=1.1.0",
    "libcst>=1.1.0",
    "embed-client>=3.1.7.24",
    "mcp-proxy-adapter>=8.10.6",
    "queuemgr>=1.0.17",
    "psycopg[binary]>=3.1",
]

[project.scripts]
casmgr = "casmgr_entry.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0",
    "anyio>=4.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_analysis*", "casmgr_entry*"]
