[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis"
version = "1.0.6"
description = "Code analysis MCP server, database tooling, and AST/CST commands"
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" },
]
dependencies = [
    "commentjson>=0.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "click>=8.0",
    "mcp>=1.0.0",
    "pydantic>=2.1.0",
    "svo-client>=3.2.0",
    "python-dateutil>=2.8",
    "markdown-it-py>=4.0",
    "lark>=1.1.0",
    "libcst>=1.1.0",
    "embed-client>=3.1.9.3",
    "mcp-proxy-adapter>=8.10.13",
    "queuemgr>=1.0.19",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "dulwich>=1.2.4",
]
# PostgreSQL logical backup (backup_database / restore_database) also needs OS binaries
# pg_dump and pg_restore (e.g. Debian/Ubuntu: apt install postgresql-client). Pip cannot
# install them. Optional extra `postgres-backup` is a marker: `pip install -e ".[postgres-backup]"`.

[project.optional-dependencies]
# Empty extra: documents that operators should install postgresql-client for pg_dump/pg_restore.
postgres-backup = []
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4",
    "pytest-cov>=7.0",
    "anyio>=4.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_analysis*", "casmgr_entry*"]