[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analysis"
version = "1.6.50"
description = "Code analysis MCP server, database tooling, and AST/CST commands"
readme = { file = "docs/README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
    { name = "Vasiliy Zdanovskiy", email = "vasilyvz@gmail.com" },
]
dependencies = [
    "commentjson>=0.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "click>=8.0",
    "mcp>=1.0.0",
    "pydantic>=2.1.0",
    "svo-client>=4.0.1",
    "python-dateutil>=2.8",
    "markdown-it-py>=4.0",
    "lark>=1.1.0",
    "libcst>=1.1.0",
    "embed-client>=3.1.9.5",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "mcp-proxy-adapter>=8.10.19",
    "numpy>=1.26,<3",
    "faiss-cpu>=1.7",
    "queuemgr>=1.0.20",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "dulwich>=1.2.4",
    # Code-quality tools: the server RUNS these (lint_code, type_check_code,
    # comprehensive_analysis), resolved via `python -m <tool>`, so they must be
    # in the runtime venv/image, not just dev. Pinned (major-bounded) for
    # reproducible rebuilds. See TZ-CA-QUALITY-TOOLS-001.
    "flake8>=7.0,<8",
    "mypy>=1.8,<2",
    "black>=24.0,<26",
    "isort>=5.13,<7",
    "bandit>=1.7,<2",
]
# PostgreSQL logical backup (backup_database / restore_database) also needs OS binaries
# pg_dump and pg_restore (e.g. Debian/Ubuntu: apt install postgresql-client). Pip cannot
# install them. Optional extra `postgres-backup` is a marker: `pip install -e ".[postgres-backup]"`.

[project.optional-dependencies]
# Empty extra: documents that operators should install postgresql-client for pg_dump/pg_restore.
postgres-backup = []
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-timeout>=2.4",
    "pytest-cov>=7.0",
    "anyio>=4.0",
    # black / flake8 / mypy moved to runtime dependencies (the server runs them);
    # isort / bandit added there too. Kept out of dev to avoid divergent pins.
]

[tool.code-analysis.dependency-versions]
mcp-proxy-adapter = "8.10.19"
queuemgr = "1.0.20"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_analysis*", "casmgr_entry*"]

[tool.black]
line-length = 88
target-version = ["py312"]
